[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "airport-simulation"
version = "0.1.0"
description = "Airport simulation backend"
requires-python = ">=3.8"
dependencies = [
    "websockets==10.4",
]

[tool.pylsp-mypy]
enabled = true
live_mode = true

[tool.pylsp-mypy.dmypy]
enabled = true

[tool.pylsp-mypy.dmypy.daemon]
enabled = true 